# jt-snippets

./: .flake8  .gitignore  README.md  VERSION  build.sh  distribute.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  upgrade.py
.github/workflows/: hosted.yml  hosted_test.yml  premise.yml  premise_build.yml  premise_test.yml  tests.yml
scripts/: upgrade.py
src/: csv_ops.py  data_generator_ops.py  datatype_ops.py  datetime_ops.py  decorator_ops.py  io_ops.py  validator_ops.py
src/jt_snippets/: __init__.py  _version.py  callback_ops.py  csv_ops.py  data_generator_ops.py  datatype_ops.py  datetime_ops.py  decorator_ops.py  enums.py  internet_ops.py  io_ops.py  logger_ops.py  models.py  string_ops.py  validator_ops.py
tests/: README.md  test_datatype_ops.py  test_datetime_ops.py  test_internet_ops.py  test_io_ops.py  test_models.py  test_string_ops.py  test_validator_ops.py
