[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "Jeremy Tan" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10.12",
]
description = "JT Code Snippets"
dynamic = ["version", "dependencies"]
name = "jt_snippets"
requires-python = ">=3.10.12"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-prod.txt"] }
version = { attr = "jt_snippets.VERSION" }

[tool.pytest.ini_options]
addopts = "-vvv -s --cov-report=term-missing --cov=jt_snippets"
testpaths = ["tests"]

[tool.ruff]
exclude = [".env"]
# line-length = 119
select = ["F401", "E711", "E713"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
files = ["src"]
ignore_missing_imports = false
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
